@@ -18,6 +18,8 @@ import java.util.Map;
 
 /**
  * 元空间内存溢出
+ *
+ * -Xmx20m  -Xmn4m -XX:+UseG1GC  -verbose:gc -Xlog:gc,gc+ref=debug,gc+heap=debug,gc+age=trace:file=/gc_%p.log:tags,uptime,time,level -Xlog:safepoint:file=/safepoint_%p.log:tags,uptime,time,level -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/ -XX:ErrorFile=/hs_error_pid%p.log -XX:-OmitStackTraceInFastThrow -XX:MetaspaceSize=16M -XX:MaxMetaspaceSize=16M
  */
 public class MetaspaceOOMTest {
     public interface Facade {
